SQLite implementations; Fallback to jdk 11;